# foundery-os-core

./: .gitignore  Cargo.toml  README.md  dfx.json  dfx.networks.json
.cargo/: config.toml
src/: authorization.rs  foundery_os_core.did  lib.rs  state.rs  types.rs
src/discussion/: api.rs  hash.rs  mod.rs  state.rs  types.rs  validation.rs
tests/: pocketic_smoke.rs
wasm/: foundery_os_core.wasm
