[package]
name = "foundery_os_core"
version = "0.1.0"
edition = "2021"
description = "FounderyOS Core Canister - Captures, Sprints, Workspaces, Templates"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
candid = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
pocket-ic = "6"
candid = "0.10"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
